# INVAR

./: .gitignore  README.md  lab_session.py  pyproject.toml
docs/: INVAR_BEHAVIOR_ATLAS.md  INVAR_CONSTRAINT_ENFORCEMENT_CONTRACT.md  INVAR_CORE_CONTRACT.md  INVAR_EXECUTION_TEMPORAL_CONTRACT.md  INVAR_LAYER0_OSCILLATION_ADDENDUM.md  INVAR_REPO_BLUEPRINT.md
federation/: __init__.py  core.py  scenarios.py
invar/: __init__.py
invar/adapters/measurement/: instrument_driver.py  next_action.py  tool_normalizer.py
invar/adapters/redteam/: acknowledgment.py  action_proposal.py  domain_model.py  feedback.py  observer.py  relationship_graph.py  windows_ingest.py  workflow.py
invar/core/: canonical_boundary.py  coarse_grain.py  envelope.py  field.py  functional.py  gate.py  gravity.py  ingest_sequencer.py  narrative.py  observation.py  proto_topology.py  support_engine.py  topology.py  topology_candidates.py  topology_commitments.py  topology_trace.py
invar/kernel/: adapters.py  field_local.py  folds.py  hooks.py  orchestrator.py  pearl_manifold.py  pearls.py  state.py  support.py  tool_protocol.py
invar/mcp/: server.py
invar/persistence/: causal_field.py  execution_window.py  pearl_archive.py  proto_causality.py  temporal_graph.py
invar/substrate/: __init__.py
tests/: conftest.py  test_core_federation.py  test_core_invariants.py  test_core_physics.py  test_core_stress.py  test_layer0_o_invariants.py  test_layer3_execution_temporal.py  test_measurement_normalizer.py
